Add additional support for Passive Packer schema